--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ background-position: center;
         }
 
         .kids {
-            background-image: url('img/f1.jpg');
+            background-image: url('f1.jpg');
         }
 
         .category-content {
@@ -813,7 +813,7 @@ background-position: center;
                         </div>
                     </div>
                     <div class="product-card">
-                        <div class="product-img" style="background-image: url('img/f7.jpg')"></div>
+                        <div class="product-img" style="background-image: url('f7.jpg')"></div>
                         <div class="product-content">
                             <h3>Conjunto Infantil de Bambu</h3>
                             <p class="price">R$ 129,90</p>
@@ -1403,4 +1403,5 @@ background-position: center;
         });
     </script>
 </body>
+
 </html>
