--- a/sobrenos.html
+++ b/sobrenos.html
@@ -605,7 +605,7 @@
             </div>
             <div class="team-grid">
                 <div class="team-member">
-                    <div class="member-img" style="background-image: url('img/f2.jpg')"></div>
+                    <div class="member-img" style="background-image: url('f2.jpg')"></div>
                     <div class="member-info">
                         <h3>Wender Lopes</h3>
                         <p class="member-role">CEO & Progamador</p>
@@ -613,26 +613,26 @@
                     </div>
                 </div>
                 <div class="team-member">
-                      <div class="member-img" style="background-image: url('img/f4.jpg')"></div><div class="member-info">
+                      <div class="member-img" style="background-image: url('f4.jpg')"></div><div class="member-info">
                         <h3>Fernanda Rocha</h3>
                         <p class="member-role">Diretora de Operações</p>
                           </div>
                 </div>
                 <div class="team-member">
-                    <div class="member-img" style="background-image: url('img/f6.jpg')"></div>
+                    <div class="member-img" style="background-image: url('f6.jpg')"></div>
                     <div class="member-info">
                         <h3>Lui Martin</h3>
                         <p class="member-role">Diretor Criativo</p>
                         </div>
                 </div>
                 <div class="team-member">
-                      <div class="member-img" style="background-image: url('img/f5.jpg')"></div> <div class="member-info">
+                      <div class="member-img" style="background-image: url('f5.jpg')"></div> <div class="member-info">
                         <h3>Amanda Reis</h3>
                         <p class="member-role">Gerente de Sustentabilidade</p>
                          </div>
                 </div>
                   <div class="team-member">
-                    <div class="member-img" style="background-image: url('img/f3.jpg')"></div>
+                    <div class="member-img" style="background-image: url('f3.jpg')"></div>
                     <div class="member-info">
                         <h3>Thiago Valentim</h3>
                         <p class="member-role">Gerente de Vendas</p>
