--- a/kids.html
+++ b/kids.html
@@ -630,9 +630,9 @@
                 <div class="footer-col">
                     <h3>Contato</h3>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> Rua Verde, 123 - São Paulo, SP</li>
-                        <li><i class="fas fa-phone"></i> (11) 9999-9999</li>
-                        <li><i class="fas fa-envelope"></i> contato@purematter.com</li>
+                              <li><i class="fas fa-map-marker-alt"></i> Senai "Luiz Pagliato"</li>
+                        <li><i class="fas fa-phone"></i> (15) 99258-7986</li>
+                        <li><i class="fas fa-envelope"></i> Pure_Mattero@gmail.com</li>
                     </ul>
                 </div>
             </div>
@@ -801,4 +801,5 @@
         updateCart();
     </script>
 </body>
+
 </html>
